2008-12-15  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.19.3 ===

2008-12-13  Matthias Clasen <mclasen@redhat.com>

	* NEWS: Updates

2008-12-12  Dan Winship  <danw@gnome.org>

	* glib/pltcheck.sh: make this work on x86_64
 
2008-12-12  Ryan Lortie  <desrt@desrt.ca>

	* gio/gicon.c (g_icon_to_string_tokenized): free the tokens when done
	with them

2008-12-12  Ryan Lortie  <desrt@desrt.ca>

	* gio/gunixmounts.c (g_unix_mount_at): fix leak that occurs when
	multiple mount entries match the requested path

2008-12-12  Behdad Esfahbod  <behdad@gnome.org>

	* glib/guniprop.c: Improve g_unichar_iswide_cjk() docs.

2008-12-07  Matthias Clasen  <mclasen@redhat.com>

	Bug 508021 – Add support for the CRIS and CRISv32 architectures

	* configure.in: 
	* glib/gatomic.c: Add an implementation for the CRIS and CRISv32 
	architectures, by Peter Kjellerstedt

2008-12-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c: Some more documentation additions.

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.2 ===

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.1 ===

	* NEWS: Updates

2008-11-28  Behdad Esfahbod  <behdad@gnome.org>

	Bug 562639 – g_parse_debug_flags() parsing "help"

	* glib/gutils.c (g_parse_debug_string): Print available keys if
	string is "help".

2008-11-28  Behdad Esfahbod  <behdad@gnome.org>

	Bug 562638 – GDebugKey key member should be const

	* glib/gutils.h: Change GDebugKey key member from gchar * to
	const gchar *.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 547264 – Missing "no flags" flag

	* glib/gregex.c: Mention 0 as value for 'no flags' in some places..
	Pointed out by Bastien Nocera

2008-11-28  Matthias Clasen  <mclasen@redhat.com>
